# Sim-Equity

./: .gitignore  CITATION.cff  EDA.ipynb  Evacuation Results Analysis.ipynb  LICENSE  README.md  agent_evacuation_paths_debug.html  investigating_public_transportation_network.ipynb  main.py  pyproject.toml  t.py  t2.py
analysis/notebooks/: evacuation_results_analysis.ipynb  public_transport_network.ipynb
analysis/scripts/: evacuation_results_analysis.py  public_transport_network.py
outputs/agent_states/: fallback_agent_states.csv  final_agent_states.csv
outputs/agent_states/simulation_outcomes/: Agents_Statistics_Trial.csv
outputs/figures/evacuation_maps/: evacuation_map_bike.html  evacuation_map_vehicle.html
outputs/figures/svi_analysis/: interactive_svi_map.html
plots/evacuation_maps/: evacuation_map_bike.html  evacuation_map_vehicle.html
scripts/: main.py
simulation/: README.md  mesa_agents.py  preparing_resources.py
simulation/configs/: evacuation_simulation.json  simulation_summary.json
simulation/model/: agent_initializer.py  agents_model_initializer.py  evac_mod_agent_py.py  evacuation_model.py  setup.py  simulation_analytics.py
simulation/space/: environment.py  evacuation_area_initializer.py  pre_process_amenities.py
