[project]
name = "sim-equity"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "adjusttext>=1.3.0",
    "alive-progress>=3.3.0",
    "folium>=0.20.0",
    "lxml>=6.0.0",
    "mesa>=3.2.0",
    "mesa-frames>=0.1.0a0",
    "mesa-geo>=0.9.1",
    "notebook>=7.4.3",
    "nx-cugraph-cu12>=25.6.0",
    "osmium>=4.0.2",
    "osmnx>=2.0.5",
    "pandas>=2.3.0",
    "polars>=1.31.0",
    "pyarrow",
    "pynsee>=0.2.3",
    "pyrosm>=0.6.2",
    "scikit-learn>=1.7.0",
    "ydata-profiling>=4.16.1",
]
