[project]
name = "sim-equity"
version = "0.1.0"
description = "Agent-based evacuation equity simulation using OSMnx, r5py, and AgentPy"
requires-python = ">=3.12"
dependencies = [
    "adjusttext>=1.3.0",
    "agentpy>=0.1.5",
    "alive-progress>=3.3.0",
    "black>=25.1.0",
    "cython>=3.1.2",
    "folium>=0.20.0",
    "geojson>=3.2.0",
    "geopandas>=1.0.1",
    "geopolars>=0.1.0a4",
    "haversine>=2.9.0",
    "lxml>=6.0.0",
    "notebook>=7.4.3",
    "nx-cugraph-cu12>=25.6.0",
    "nx-parallel>=0.3",
    "osmium>=4.0.2",
    "osmnx>=2.0.5",
    "pandas>=2.3.0",
    "peartree>=0.6.4",
    "playwright>=1.54.0",
    "polars>=1.31.0",
    "pyarrow",
    "pynsee>=0.2.3",
    "pyrosm>=0.6.2",
    "r5py>=1.0.6",
    "rustworkx>=0.17.1",
    "scikit-learn>=1.7.0",
    "shapely>=2.1.1",
    "ydata-profiling>=4.16.1",
]
